--- a/projects.yaml
+++ b/projects.yaml
@@ -193,6 +193,18 @@ projects:
       - windows
       - mac
       - gtk
+  - name: httpie
+    repo_url: https://github.com/jakubroztocil/httpie
+    home_url: https://httpie.org/
+    pypi_url: https://pypi.org/project/httpie
+    date_added: 2019-10-10 23:15:00
+    desc: Command-line HTTP client with JSON support, syntax highlighting, wget-like downloads, extensions, and more.
+    tags:
+      - internet
+      - dev
+      - linux
+      - windows
+      - mac
   - name: Isso
     repo_url: https://github.com/posativ/isso
     home_url: https://posativ.org/isso
@@ -1006,6 +1018,19 @@ projects:
     tags:
       - productivity
       - storage
+      - linux
+      - windows
+      - mac
+  - name: GTimeLog
+    repo_url: https://github.com/gtimelog/gtimelog
+    home_url: https://gtimelog.org/
+    docs_url: https://gtimelog.org/docs.html
+    fund_url: https://ko-fi.com/mgedmin
+    date_added: 2019-10-10 23:15:00
+    desc: Desktop-based time tracker with support for logging billable/non-billable work.
+    tags:
+      - productivity
+      - organization
       - linux
       - windows
       - mac
@@ -2934,18 +2959,14 @@ projects:
       - server
   - name: privacyIDEA
     repo_url: https://github.com/privacyidea/privacyidea
+    home_url: https://privacyidea.org/
+    docs_url: https://privacyidea.readthedocs.io/
     wp_url: https://en.wikipedia.org/wiki/PrivacyIDEA
-    docs_url: https://privacyidea.readthedocs.io
-    home_url: https://privacyidea.org
     date_added: 2019-10-06 20:15:00
-    desc: A multi factor authentication server running on premises, supporting many different token types and allowing authentication via 
-      REST API, RADIUS, PAM, Windows Credential Provider, SAML, OpenID Connect.
+    desc: A multi factor authentication server running on premises, supporting many different token types and allowing authentication via REST API, RADIUS, PAM, Windows Credential Provider, SAML, OpenID Connect.
     tags:
       - security
       - server
-      - internet
-      - organization
-      - flask
   - name: Pupy
     repo_url: https://github.com/n1nj4sec/pupy
     docs_url: https://github.com/n1nj4sec/pupy/wiki/Installation
@@ -3357,9 +3378,11 @@ projects:
       - mac
   - name: doit
     repo_url: https://github.com/pydoit/doit
+    home_url: https://pydoit.org/
     docs_url: https://pydoit.org/contents.html
-    wp_url: https://pydoit.org/
-    desc: Task management & automation tool.
+    fund_url: https://opencollective.com/doit
+    date_added: 2019-10-10 23:15:00
+    desc: Command-line task management and automation tool, with directives written in Python.
     tags:
       - build
       - linux
@@ -3485,17 +3508,6 @@ projects:
 #
 # Dev
 #
-  - name: httpie
-    repo_url: https://github.com/jakubroztocil/httpie
-    pypi_url: https://pypi.org/project/httpie/
-    home_url: https://httpie.org/
-    desc: Command-line HTTP client with JSON support, syntax highlighting, wget-like downloads, extensions, and more.
-    tags: 
-      - dev
-      - internet
-      - linux
-      - windows
-      - mac
   - name: asciinema
     repo_url: https://github.com/asciinema/asciinema
     home_url: https://asciinema.org/
@@ -3529,15 +3541,6 @@ projects:
     tags:
       - dev
       - console
-  - name: doitlive
-    repo_url: https://github.com/sloria/doitlive
-    docs_url: https://doitlive.readthedocs.io/
-    pypi_url: https://pypi.org/project/doitlive/
-    desc: Tool for live presentations in the terminal.
-    tags:
-      - dev
-      - linux
-      - mac
   - name: Cython
     repo_url: https://github.com/cython/cython
     home_url: https://cython.org/
@@ -3549,6 +3552,16 @@ projects:
       - dev
       - linux
       - windows
+      - mac
+  - name: doitlive
+    repo_url: https://github.com/sloria/doitlive
+    docs_url: https://doitlive.readthedocs.io/
+    pypi_url: https://pypi.org/project/doitlive
+    date_added: 2019-10-10 23:15:00
+    desc: Tool for live presentations in the terminal.
+    tags:
+      - dev
+      - linux
       - mac
   - name: gdbgui
     repo_url: https://github.com/cs01/gdbgui
@@ -3823,16 +3836,5 @@ projects:
     desc: Cross-platform remote display server and client for forwarding applications and desktop screens.
     tags:
       - misc
-      - linux
-      - windows
-  - name: GTimeLog
-    home_url: https://gtimelog.org
-    docs_url: https://gtimelog.org/docs.html
-    repo_url: https://github.com/gtimelog/gtimelog
-    desc: Desktop-based time tracker with support for logging billable/non-billable work.
-    tags:
-      - organization
-      - productivity
-      - mac
       - linux
       - windows
