render in recent additions (airflow, wikipedia links)

--- a/projects.yaml
+++ b/projects.yaml
@@ -152,9 +152,9 @@ projects:
       - tui
   - name: Deluge
     repo_url: https://github.com/deluge-torrent/deluge
-    wp_url: https://en.wikipedia.org/wiki/Deluge_(software)
     home_url: https://deluge-torrent.org/
     fund_url: https://www.patreon.com/deluge_cas
+    wp_url: https://en.wikipedia.org/wiki/Deluge_%28software%29
     date_added: 2018-11-26 01:59:00
     desc: Popular, lightweight, cross-platform BitTorrent client.
     tags:
@@ -879,9 +879,9 @@ projects:
       - qt4
   - name: Lutris
     repo_url: https://github.com/lutris/lutris
-    wp_url: https://en.wikipedia.org/wiki/Lutris
     home_url: https://lutris.net/
     fund_url: https://www.patreon.com/lutris
+    wp_url: https://en.wikipedia.org/wiki/Lutris
     date_added: 2019-01-07 22:16:00
     desc: Gaming platform for GNU/Linux, managing game installations with a unified interface.
     tags:
@@ -890,8 +890,8 @@ projects:
       - gtk
   - name: PyChess
     repo_url: https://github.com/pychess/pychess
-    wp_url: https://en.wikipedia.org/wiki/PyChess
     home_url: http://pychess.org/
+    wp_url: https://en.wikipedia.org/wiki/PyChess
     date_added: 2018-11-24 02:37:00
     desc: Advanced chess client, suitable for new, casual, and competitive play.
     tags:
@@ -946,8 +946,8 @@ projects:
 #
   - name: Autokey
     repo_url: https://github.com/autokey/autokey
-    wp_url: https://en.wikipedia.org/wiki/AutoKey
     pypi_url: https://pypi.org/project/autokey
+    wp_url: https://en.wikipedia.org/wiki/AutoKey
     date_added: 2018-11-24 02:37:00
     desc: Desktop automation utility for Linux and X11.
     tags:
@@ -1198,9 +1198,9 @@ projects:
       - server
   - name: Calibre
     repo_url: https://github.com/kovidgoyal/calibre
-    wp_url: https://en.wikipedia.org/wiki/Calibre_(software)
     home_url: https://calibre-ebook.com/
     fund_url: https://www.patreon.com/kovidgoyal
+    wp_url: https://en.wikipedia.org/wiki/Calibre_%28software%29
     date_added: 2018-11-24 02:37:00
     desc: E-book manager designed for viewing, converting, editing, and cataloging e-books in all major formats.
     tags:
@@ -2618,7 +2618,6 @@ projects:
 #
   - name: Airflow
     repo_url: https://github.com/apache/airflow
-    home_url: https://airflow.apache.org/
     docs_url: https://airflow.apache.org/
     date_added: 2019-10-22 07:00:00
     desc: A platform to programmatically author, schedule and monitor workflows.
@@ -2626,8 +2625,8 @@ projects:
       - ops
       - linux
       - server
-      - flask
       - corp
+      - flask
   - name: Ansible
     repo_url: https://github.com/ansible/ansible
     home_url: https://www.ansible.com/
@@ -3123,8 +3122,8 @@ projects:
       - gtk
   - name: Jupyter Notebook
     repo_url: https://github.com/jupyter/notebook
-    wp_url: https://en.wikipedia.org/wiki/Project_Jupyter#Jupyter_Notebook
     home_url: https://jupyter.org/
+    wp_url: https://en.wikipedia.org/wiki/Project_Jupyter#Jupyter_Notebook
     date_added: 2018-11-26 01:59:00
     desc: Web-based, extensible notebook environment for interactive computing.
     tags:
@@ -3134,8 +3133,8 @@ projects:
       - mac
   - name: Komodo Edit
     repo_url: https://github.com/Komodo/KomodoEdit
-    wp_url: https://en.wikipedia.org/wiki/Komodo_Edit
     home_url: https://www.activestate.com/products/komodo-edit
+    wp_url: https://en.wikipedia.org/wiki/Komodo_Edit
     date_added: 2018-11-26 01:59:00
     desc: Multi-language code editor, written in JS, Python, and C++, based on the Mozilla platform.
     tags:
@@ -3147,8 +3146,8 @@ projects:
       - js
   - name: Leo Editor
     repo_url: https://github.com/leo-editor/leo-editor
-    wp_url: https://en.wikipedia.org/wiki/Leo_(text_editor)
     home_url: http://leoeditor.com/
+    wp_url: https://en.wikipedia.org/wiki/Leo_%28text_editor%29
     date_added: 2018-11-26 01:59:00
     desc: Personal Information Manager (PIM), IDE, and outliner with a holistic approach to programming and writing.
     tags:
@@ -3200,8 +3199,8 @@ projects:
       - linux
   - name: Spyder IDE
     repo_url: https://github.com/spyder-ide/spyder
-    wp_url: https://en.wikipedia.org/wiki/Spyder_(software)
     home_url: https://www.spyder-ide.org/
+    wp_url: https://en.wikipedia.org/wiki/Spyder_%28software%29
     date_added: 2018-11-26 01:59:00
     desc: Scientific editing and execution environment designed by and for scientists, engineers, and data analysts using Python.
     tags:
