--- a/projects.yaml
+++ b/projects.yaml
@@ -1163,8 +1163,8 @@ projects:
     docs_url: https://visidata.org/docs
     fund_url: https://patreon.com/saulpw
     pypi_url: https://pypi.org/project/visidata
-    date_added: 2019-10-15 22:58:00
-    desc: Interactive multitool for exploring, analyzing and converting datasets in the terminal.
+    date_added: 2019-10-29 10:00:00
+    desc: Interactive multitool for exploring, analyzing, and converting datasets in the terminal.
     tags:
       - productivity
       - linux
