archive opsmop, add some todos

--- a/archive.yaml
+++ b/archive.yaml
@@ -17,3 +17,13 @@ projects:
     home_url: https://www.bikalims.org/
   - name: Django Trigger Happy
     repo_url: https://github.com/push-things/django-th
+  - name: OpsMop
+    repo_url: https://github.com/opsmop/opsmop
+    home_url: https://opsmop.io/
+    docs_url: https://docs.opsmop.io/
+    date_added: 2019-01-23 09:56:00
+    desc: Agentless distributed SSH control plane, with a focus on runtime performance and developer efficiency.
+    tags:
+      - ops
+      - linux
+      - mac
