add the wonderful Scholia /cc @fnielsen @egonw @Daniel-Mietchen

--- a/projects.yaml
+++ b/projects.yaml
@@ -1524,6 +1524,16 @@ projects:
       - linux
       - windows
       - mac
+  - name: Scholia
+    repo_url: https://github.com/fnielsen/scholia
+    home_url: https://tools.wmflabs.org/scholia
+    docs_url: https://www.wikidata.org/wiki/Wikidata%3AScholia
+    date_added: 2019-11-13 18:24:00
+    desc: Python package and web application for interacting with scholarly information on [Wikidata](https://www.wikidata.org/).
+    tags:
+      - organization
+      - science
+      - server
   - name: Senaite
     repo_url: https://github.com/senaite/senaite.lims
     home_url: https://www.senaite.com/
