--- a/projects.yaml
+++ b/projects.yaml
@@ -1466,6 +1466,13 @@ projects:
       - windows
       - mac
       - docker
+  - name: Paperless
+    repo_url: https://github.com/the-paperless-project/paperless
+    docs_url: https://paperless.readthedocs.io/en/latest/
+    desc: Scan, index, and archive all of your paper documents. Supports OCR, tags, search, encryption and more.
+    tags:
+      - organization
+      - server
   - name: Paperwork
     repo_url: https://gitlab.gnome.org/World/OpenPaperwork/paperwork
     home_url: https://openpaper.work/
