--- a/projects.yaml
+++ b/projects.yaml
@@ -3970,6 +3970,15 @@ projects:
 #
 # Misc
 #
+  - name: CourtListener
+    repo_url: https://github.com/freelawproject/courtlistener
+    home_url: https://www.courtlistener.com/
+    wp_url: https://en.wikipedia.org/wiki/Free_Law_Project
+    date_added: 2020-04-04 23:59:00
+    desc: Web application which provides a graph-based search interface and API with 900,000 minutes of oral argument recordings, more than eight thousand judges, and more than three million opinions. Also powers [RECAP search](https://www.courtlistener.com/recap/).
+    tags:
+      - misc
+      - server
   - name: Guake
     repo_url: https://github.com/Guake/guake
     home_url: http://guake-project.org/
