--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,4 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: linkchecker
-      uses: cam-barts/linkchecker-action@master
+      uses: cam-barts/linkchecker-action@master\
+    - name: Upload exclusion list as an artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: exclude_links.json
+        path: exclude_links.json
