--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: linkchecker
-      uses: cam-barts/linkchecker-action@master\
+      uses: cam-barts/linkchecker-action@master
     - name: Upload exclusion list as an artifact
       uses: actions/upload-artifact@v1
       with:
