Updated Workflow file for new linkchecker version

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,3 +1,4 @@
+
 on:
   schedule:
   - cron: '00 9 * * *'
@@ -13,6 +14,7 @@ jobs:
       uses: cam-barts/linkchecker-action@master
     - name: Upload exclusion list as an artifact
       uses: actions/upload-artifact@v1
+      if: always()
       with:
         name: exclude_links.json
         path: exclude_links.json
