--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@master
     - name: linkchecker
       uses: cam-barts/linkchecker-action@master
+      env:
+        include_files: "Readme.md"
     - name: Upload exclusion list as an artifact
       uses: actions/upload-artifact@v1
       if: always()
