--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
     - name: linkchecker
       uses: cam-barts/linkchecker-action@master
       env:
-        include_files: "Readme.md"
+        include_files: "README.md"
     - name: Upload exclusion list as an artifact
       uses: actions/upload-artifact@v1
       if: always()
